After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744896 - Fix UI process crash if the web process crashes on start
Fix UI process crash if the web process crashes on start
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-21 16:25 UTC by Michael Catanzaro
Modified: 2015-03-04 15:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix UI process crash if the web process crashes on start (1.87 KB, patch)
2015-02-21 16:25 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-02-21 16:25:44 UTC
Fix UI process crash if the web process crashes on start
Comment 1 Michael Catanzaro 2015-02-21 16:25:52 UTC
Created attachment 297502 [details] [review]
Fix UI process crash if the web process crashes on start

Currently there is a WebKit bug that causes the web process to crash
when we use webkit_web_view_load_alternate_html() on a local page, say
because Epiphany was closed when a file:// URI was opened in an embed
other than the focused embed. That crash occurs after
web_extension_appeared_cb() but prior to
web_extension_proxy_created_cb(), triggering a call to
web_extension_vanished_cb(), which deletes the EphyWebExtensionProxy
object that is expected to still be alive when
web_extension_proxy_created_cb() is called, crashing the UI process.
We can fix this with a ref/unref pair.
Comment 2 Michael Catanzaro 2015-03-04 15:18:17 UTC
Approved on IRC

Attachment 297502 [details] pushed as ff027c6 - Fix UI process crash if the web process crashes on start